--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,8 +1,10 @@
 ---
+import "../styles/footer.css";
+
 const year = new Date().getFullYear();
 ---
 
-<link rel="stylesheet" href="/styles/footer.css" />
+
 
 <footer class="footer">
   <div class="footerInner">
